added genetic algorithm result tuning

--- a/science/GENSAC.ipynb
+++ b/science/GENSAC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +97,7 @@
     "        self.C = A2\n",
     "        self.D = -M0[0]*A0+M0[1]*A1-M0[2]*A2\n",
     "    def calc_dist(self, pcd):\n",
+    "        #print(pcd[:,0].shape, self.A)\n",
     "        R = np.absolute(self.A*pcd[:,0]+self.B*pcd[:,1]+self.C*pcd[:,2]+self.D)/(np.sqrt(self.A**2+self.B**2+self.C**2)+ sys.float_info.epsilon)\n",
     "        #print(type(R))\n",
     "        return R"
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_plane(pcd, iterations, threshold):\n",
-    "    best_fit = 0############## убрать костыль\n",
+    "    best_fit = 0    ############## убрать костыль\n",
     "    best_inliers_pts = np.zeros([1,3])\n",
     "    best_inlier_indices = None\n",
     "    inliers = None\n",
@@ -181,7 +182,7 @@
     "            best_model = [A,B,C]\n",
     "            best_inliers_pts = inliers_pts\n",
     "            best_inlier_indices = inliers\n",
-    "    return best_model, best_inliers_pts, best_inlier_indices"
+    "    return best_model, best_inliers_pts, best_inlier_indices, p,best_fit"
    ]
   },
   {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,12 +347,192 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Genetic algorithm tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class plane_GA:\n",
+    "    def __init__(self, A, B, C,D):\n",
+    "        #print(A)\n",
+    "        self.A = A\n",
+    "        self.B = B\n",
+    "        self.C = C\n",
+    "        self.D = D\n",
+    "    def calc_dist(self, pcd):\n",
+    "        #print(pcd[:,0].shape, self.A.shape)\n",
+    "        R = np.absolute(self.A*pcd[:,0]+self.B*pcd[:,1]+self.C*pcd[:,2]+self.D)/(np.sqrt(self.A**2+self.B**2+self.C**2)+ sys.float_info.epsilon)\n",
+    "        #print(type(R))\n",
+    "        return R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 381,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GA_for_plane:\n",
+    "    def __init__(self):\n",
+    "        self.population=[]\n",
+    "        self.fitness =[]\n",
+    "        self.params = ['A', 'B', 'C', 'D']\n",
+    "        \n",
+    "    def init_popultation(self, size, A,B,C,D):\n",
+    "        #self.population=[]\n",
+    "        self.size = size\n",
+    "        for _ in range(self.size):\n",
+    "            rand_A = A + random.uniform(-1, 1)\n",
+    "            rand_B = B + random.uniform(-1, 1)\n",
+    "            rand_C = C + random.uniform(-1, 1)\n",
+    "            rand_D = D + random.uniform(-1, 1)\n",
+    "            self.population.append(plane_GA(rand_A,rand_B,rand_C,rand_D))\n",
+    "            \n",
+    "            \n",
+    "    def calc_fitness(self, pcd, threshold):\n",
+    "        self.fitness =[]\n",
+    "        #pcd = \n",
+    "        for i in range(self.size):  \n",
+    "            distance = self.population[i].calc_dist(np.asarray(pcd.points))\n",
+    "            inliers = np.where(distance<=threshold)[0]\n",
+    "            inliers_len = inliers.shape[0] +3\n",
+    "            inliers_pts = np.take(np.asarray(pcd.points),inliers,axis=0)\n",
+    "            outliers = np.asarray(pcd.points).shape[0] - inliers_len\n",
+    "            fit = inliers_len/outliers\n",
+    "            self.fitness.append(fit)\n",
+    "            \n",
+    "        x = zip(self.fitness,self.population)\n",
+    "        xs = sorted(x,reverse = True, key=lambda tup: tup[0])\n",
+    "        self.fitness = [x[0] for x in xs]\n",
+    "        self.population = [x[1] for x in xs]\n",
+    "        #print(self.fitness)\n",
+    "        \n",
+    "    \n",
+    "        \n",
+    "        \n",
+    "    def selection(self):\n",
+    "        self.population = self.population[:int(len(self.population)/2)]\n",
+    "        \n",
+    "    \n",
+    "    def crossover(self, r1, r2):\n",
+    "        a = np.random.random(1)\n",
+    "        b = 1 - a\n",
+    "        \n",
+    "        A_new_1 = a * r1.A + b * r2.A\n",
+    "        B_new_1 = a * r1.B + b * r2.B\n",
+    "        C_new_1 = a * r1.C + b * r2.C\n",
+    "        D_new_1 = a * r1.D + b * r2.D\n",
+    "        self.plane_new_1 = plane_GA(A_new_1, B_new_1, C_new_1, D_new_1)\n",
+    "        a = 1 - a\n",
+    "        b = 1 - b\n",
+    "        A_new_2 = a * r1.A + b * r2.A\n",
+    "        B_new_2 = a * r1.B + b * r2.B\n",
+    "        C_new_2 = a * r1.C + b * r2.C\n",
+    "        D_new_2 = a * r1.D + b * r2.D\n",
+    "        self.plane_new_2 = plane_GA(A_new_2, B_new_2, C_new_2,D_new_2)\n",
+    "        \n",
+    "        return self.plane_new_1, self.plane_new_2\n",
+    "        \n",
+    "    def repopulate(self):\n",
+    "        self.offspring = []\n",
+    "        \n",
+    "        for _ in range(len(self.population)):\n",
+    "            population_indices = list(range(0,len(self.population)))\n",
+    "            index_1 = np.random.randint(0,len(self.population)-1,1)\n",
+    "            new_popultaion_indices = [el for el in population_indices if el != index_1]\n",
+    "            index_2 = random.choice(new_popultaion_indices)\n",
+    "            #print(index_2)\n",
+    "            child_1, child_2 = self.crossover(self.population[index_1[0]],self.population[index_2]) \n",
+    "            self.offspring.append(child_1)\n",
+    "            #self.offspring.append(child_2)\n",
+    "        self.population = self.population + self.offspring\n",
+    "        \n",
+    "   \n",
+    "    def mutate1(self, mutation_rate):\n",
+    "        rng = default_rng()\n",
+    "        total_gen = len(self.population)*4\n",
+    "        mutation_chance = round(mutation_rate*total_gen)\n",
+    "        R_mutate_indices = rng.choice(len(self.population)*4, size=mutation_chance, replace=False)\n",
+    "        \n",
+    "        for i in R_mutate_indices:\n",
+    "            self.population[int(i/4)].__dict__[self.params[i%4]] += 0.8*(1-2*np.random.random(1)[0])\n",
+    "            \n",
+    "        \n",
+    "    \n",
+    "    def mutate_population(self):\n",
+    "        for i in range(len(self.population)):\n",
+    "            self.population[i] = self.mutate(self.population[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genetic_tuning_plane(pcd, population_len, iterations, init_model, threshold, previous_fit):\n",
+    "    best_fit = previous_fit\n",
+    "    best_model = plane_GA(init_model[0],init_model[1],init_model[2],init_model[3])\n",
+    "    algorithm = GA_for_plane()\n",
+    "    #print(np.asarray(pcd.shape))\n",
+    "    algorithm.init_popultation(population_len,init_model[0],init_model[1],init_model[2], init_model[3])\n",
+    "    geometry_list = list()\n",
+    "\n",
+    "    for _ in range(iterations):\n",
+    "        random.shuffle(algorithm.population)\n",
+    "        #print(algorithm.population)\n",
+    "        #for i in range(len(algorithm.population)):\n",
+    "        #    inliers = algorithm.population[i].check_pts(np.asarray(pcd.points))\n",
+    "        \n",
+    "        algorithm.calc_fitness(pcd, threshold)\n",
+    "        if algorithm.fitness[0]>best_fit:\n",
+    "            best_fit = algorithm.fitness[0]\n",
+    "            print('Found better fintess: ',best_fit, 'at', _ )\n",
+    "            best_model = algorithm.population[0]\n",
+    "\n",
+    "        algorithm.selection()\n",
+    "        algorithm.repopulate()\n",
+    "        algorithm.mutate1(0.7)\n",
+    "        #algorithm.mutate_population()\n",
+    "\n",
+    "        #vis.poll_events()\n",
+    "        #vis.update_renderer()\n",
+    "        #vis.clear_geometries()\n",
+    "\n",
+    "    #experiments.append(best_fit)\n",
+    "    print('Best fitness:', best_fit)\n",
+    "    return best_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_inliers( model, pcd, threshold):\n",
+    "    distance = model.calc_dist(np.asarray(pcd.points))\n",
+    "    inliers = np.where(distance<=threshold)[0]\n",
+    "    inliers_len = inliers.shape[0] +3\n",
+    "    inliers_pts = np.take(np.asarray(pcd.points),inliers,axis=0)\n",
+    "    outliers = np.asarray(pcd.points).shape[0] - inliers_len\n",
+    "    return inliers, inliers_pts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -381,38 +562,32 @@
      "output_type": "stream",
      "text": [
       "PointCloud with 251818 points.\n",
-      "Found better fintess:  0.026986023711159417 at 0\n",
-      "Found better fintess:  0.03558914970966097 at 2\n",
-      "Found better fintess:  0.04416008757380747 at 5\n",
-      "Found better fintess:  0.06704350921202054 at 7\n",
-      "Found better fintess:  0.16165609502940836 at 10\n",
-      "Found better fintess:  0.21942810101450327 at 13\n",
-      "Found better fintess:  0.3731133310068051 at 23\n",
-      "PointCloud with 183395 points.\n",
-      "Found better fintess:  0.049957347898024265 at 0\n",
-      "Found better fintess:  0.060313477448934165 at 2\n",
-      "Found better fintess:  0.07305642183852225 at 11\n",
-      "Found better fintess:  0.08110258964730571 at 12\n",
-      "Found better fintess:  0.0942683596267214 at 42\n",
-      "PointCloud with 167599 points.\n",
-      "Found better fintess:  0.060249881385418314 at 0\n",
-      "Found better fintess:  0.07029094717482375 at 5\n",
-      "Found better fintess:  0.07129662181597367 at 7\n",
-      "Found better fintess:  0.12658721356214753 at 8\n",
-      "Found better fintess:  0.19029999147751483 at 18\n",
-      "PointCloud with 140807 points.\n",
-      "Found better fintess:  0.045679360741444866 at 0\n",
-      "Found better fintess:  0.052447866058748786 at 3\n",
-      "Found better fintess:  0.05540606378593112 at 4\n",
-      "Found better fintess:  0.06798995775278172 at 8\n",
-      "Found better fintess:  0.07016530495914877 at 11\n",
-      "Found better fintess:  0.23511661973807707 at 26\n",
-      "Found better fintess:  0.4319258852482356 at 28\n",
-      "PointCloud with 98337 points.\n",
-      "Found better fintess:  0.015710213187902826 at 0\n",
-      "Found better fintess:  0.06984562159339404 at 1\n",
-      "Found better fintess:  0.07366524729773993 at 7\n",
-      "PointCloud with 91593 points.\n"
+      "Ransac\n",
+      "Found better fintess:  0.21056452116894292 at 0\n",
+      "Found better fintess:  0.3675727048089717 at 4\n",
+      "Found better fintess:  0.3728139037899603 at 21\n",
+      "Found better fintess:  0.4039103747024291 at 27\n",
+      "GA\n",
+      "Best fitness: 0.4039103747024291\n",
+      "PointCloud with 179372 points.\n",
+      "Ransac\n",
+      "Found better fintess:  0.19329944916043534 at 0\n",
+      "Found better fintess:  0.21399903893660366 at 1\n",
+      "Found better fintess:  0.30259106489281357 at 2\n",
+      "Found better fintess:  0.30785271600437475 at 30\n",
+      "Found better fintess:  0.4953523463356481 at 69\n",
+      "GA\n",
+      "Best fitness: 0.4953523463356481\n",
+      "PointCloud with 119956 points.\n",
+      "Ransac\n",
+      "Found better fintess:  0.05615524133194809 at 0\n",
+      "Found better fintess:  0.17133092471438335 at 1\n",
+      "Found better fintess:  0.3119552021698949 at 2\n",
+      "Found better fintess:  0.3659769748454172 at 13\n",
+      "Found better fintess:  0.37791766219444956 at 65\n",
+      "GA\n",
+      "Best fitness: 0.37791766219444956\n",
+      "PointCloud with 87059 points.\n"
      ]
     }
    ],
@@ -440,7 +615,6 @@
     "    o3d.camera.PinholeCameraIntrinsic(\n",
     "        o3d.camera.PinholeCameraIntrinsicParameters.PrimeSenseDefault))\n",
     "# Flip it, otherwise the pointcloud will be upside down\n",
-    "\n",
     "#pcd.transform([[1, 0, 0, 0], [0, -1, 0, 0], [0, 0, -1, 0], [0, 0, 0, 1]])\n",
     "\n",
     "\n",
@@ -455,20 +629,12 @@
     "models_list = []\n",
     "inliers_list = []\n",
     "\n",
-    "##find planar \n",
     "\n",
-    "for i in range(4):\n",
-    "    model, inliers, inliers_indices = find_plane(pcd,50,0.009)\n",
-    "    if inliers.shape[0]>15:\n",
-    "        pts = color_pts(inliers)\n",
-    "        vis.add_geometry(pts)\n",
-    "        pcd.points = o3d.utility.Vector3dVector(np.delete(np.asarray(pcd.points), inliers_indices,0))\n",
-    "        print(pcd)\n",
-    "\n",
+    "'''\n",
     "##find spherical\n",
     "\n",
     "for i in range(1):\n",
-    "    center, radius, inliers, inliers_indices = find_sphere(pcd,50,0.009)\n",
+    "    center, radius, inliers, inliers_indices = find_sphere(pcd,50,0.1)\n",
     "    mesh = visualize_sphere(center,radius)\n",
     "    vis.add_geometry(mesh)\n",
     "    if type(inliers)!='NoneType':\n",
@@ -478,7 +644,27 @@
     "            vis.add_geometry(pts)\n",
     "            pcd.points = o3d.utility.Vector3dVector(np.delete(np.asarray(pcd.points), inliers_indices,0))\n",
     "            print(pcd)\n",
+    "'''\n",
     "\n",
+    "##find planar \n",
+    "\n",
+    "for i in range(3):\n",
+    "    print('Ransac')\n",
+    "    model, inliers, inliers_indices, plane_found, first_fit = find_plane(pcd,70,0.03)\n",
+    "    #print(model)\n",
+    "    model_to_genetic = [plane_found.A, plane_found.B, plane_found.C, plane_found.D]\n",
+    "    print('GA')\n",
+    "    best_model1 = genetic_tuning_plane(pcd, 14,30, model_to_genetic,0.03,first_fit)\n",
+    "    #print(best_model1)\n",
+    "    ga_inliers_indices, ga_inliers_indices = calc_inliers(best_model1, pts, 0.03)\n",
+    "    #print(best_model1.A)\n",
+    "    if inliers.shape[0]>15:\n",
+    "        pts = color_pts(inliers)\n",
+    "        vis.add_geometry(pts)\n",
+    "        \n",
+    "        pcd.points = o3d.utility.Vector3dVector(np.delete(np.asarray(pcd.points), inliers_indices,0))\n",
+    "        print(pcd)\n",
+    "#print(np.asarray(pcd.points).shape)\n",
     "\n",
     "\n",
     "\n",
@@ -497,30 +683,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(7):\n",
-    "    print (i)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.zeros([1,3])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
